RESOLVED FIXED125848
Fix the SH4 and ARMv7 build after r160680
https://bugs.webkit.org/show_bug.cgi?id=125848
Summary Fix the SH4 and ARMv7 build after r160680
Julien Brianceau
Reported 2013-12-17 02:40:28 PST
sh4 compilation fails: [ 20%] Building CXX object Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/assembler/MacroAssembler.cpp.o In file included from /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:33:0, from /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/MacroAssembler.h:60, from /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/LinkBuffer.h:38, from /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/LinkBuffer.cpp:27: /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/SH4Assembler.h: In constructor ‘JSC::SH4Assembler::SH4Assembler()’: /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/SH4Assembler.h:348:35: error: ‘INT_MIN’ was not declared in this scope In file included from /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/MacroAssemblerSH4.h:33:0, from /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/MacroAssembler.h:60, from /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/MacroAssembler.cpp:27: /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/SH4Assembler.h: In constructor ‘JSC::SH4Assembler::SH4Assembler()’: /local/jbriance/WebKit/cmake-sh4/webkit/Source/JavaScriptCore/assembler/SH4Assembler.h:348:35: error: ‘INT_MIN’ was not declared in this scope make[3]: *** [Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/assembler/MacroAssembler.cpp.o] Error 1 make[3]: *** Waiting for unfinished jobs.... make[3]: *** [Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/assembler/LinkBuffer.cpp.o] Error 1 make[2]: *** [Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/all] Error 2 make[1]: *** [Source/JavaScriptCore/shell/CMakeFiles/jsc.dir/rule] Error 2 make: *** [jsc] Error 2
Attachments
Include limits.h for INT_MIN in sh4 assembler. (1.02 KB, patch)
2013-12-17 02:42 PST, Julien Brianceau
ossy: review+
ossy: commit-queue-
Include limits.h for INT_MIN in armv7 and sh4 assembler. (1.54 KB, patch)
2013-12-17 04:54 PST, Julien Brianceau
no flags
Julien Brianceau
Comment 1 2013-12-17 02:42:19 PST
Created attachment 219405 [details] Include limits.h for INT_MIN in sh4 assembler.
Csaba Osztrogonác
Comment 2 2013-12-17 04:49:26 PST
Comment on attachment 219405 [details] Include limits.h for INT_MIN in sh4 assembler. Not only the SH4 build is affected, but ARMv7 too. Could you add this include to ARMv7Assembler.h too please? Otherwise LGTM, r=me with fixing both of these builds.
Julien Brianceau
Comment 3 2013-12-17 04:54:17 PST
Created attachment 219410 [details] Include limits.h for INT_MIN in armv7 and sh4 assembler.
Csaba Osztrogonác
Comment 4 2013-12-17 04:55:27 PST
Comment on attachment 219410 [details] Include limits.h for INT_MIN in armv7 and sh4 assembler. Thanks.
WebKit Commit Bot
Comment 5 2013-12-17 05:27:37 PST
Comment on attachment 219410 [details] Include limits.h for INT_MIN in armv7 and sh4 assembler. Clearing flags on attachment: 219410 Committed r160703: <http://trac.webkit.org/changeset/160703>
WebKit Commit Bot
Comment 6 2013-12-17 05:27:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.